--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                                 <tr>
                                     <td>19:00〜19:05</td>
 					                <td>コミュニティスタッフ</td>
-
                                     <td>オープニング</td>
                                 </tr>
                                 <tr>
                                     <td>19:05〜19:50</td>
                                     <td>いろふさん</td>
+                                    <td>わたしのGitの使い方</td>
                                 </tr>
                                 <tr>
                                     <td>19:50〜20:00</td>
@@ -116,6 +116,7 @@
                                 </tr>
                                 <tr>
                                     <td>21:00〜</td>
+                                    <td> - </td>
                                     <td>懇親会</td>
                                 </tr>
                                 </tbody>
